botão voltar no html base para questões

--- a/example.html
+++ b/example.html
@@ -5,6 +5,8 @@
         <title>QUESTÃO XX - LISTA XX - LÓGICA DE PROGRAMAÇÃO - SENAI</title>
     </head>
     <body>
+        <p><a href="../../">< Voltar</a></p>
+        
         <!-- SEU CÓDIGO AQUI -->
     </body>
     <script src="index.js"></script>
