--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <ul>
+            <li><a href="escolinha/public/view/aluno/index.shtml">Escolhinha do SENAI</a></li>
             <li>Lista 01</li>
             <ul>
                 <li><a href="lista_01/exercicio_01">Questão 01</a></li>
